--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -1,32 +1,25 @@
-* {
+*  {
     margin: 0;
     padding: 0;
-    
-
 }
-
-
-
 
 body {
+    background-color: black;
+    margin-left: 300px;
+    margin-right: 300px;
+}
+
+
+   
+.intro {
     height: 100vh;
-    background: linear-gradient( #1f2937 0%, #1f2937 65%, white 65%, white 140%);
-
-    
+    background-image: linear-gradient(#1f2937 50%, white 50%);
 }
 
 
-img {
-    margin-left: 165px;
-    padding: 0%;
-    margin-top: -40px;
-}
 
 
-.container {
-    display: flex;
-    display: inline;
-}
+
 
 
 
