--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -35,5 +35,63 @@ a {
     font-size: larger;
 }
 
+.content {
+    margin-left: 165px;
+    margin-top: -86px;
+}
+
+
+
+.container {
+    display: flex;
+    margin: 0 auto;
+    justify-content: flex-end;
+
+}
+
+.container > * {
+    margin: auto;
+    margin-left: 197px;
+    justify-content: space-between;
+}
+
+p {
+    color: white;
+    font-size: 18px;
+    
+}
+
+h1 {
+    color: white;
+    font-size: 48px;
+    font-family: sans-serif;
+    font-weight: bolder;
+    
+}
+
+
+button {
+    
+    background-color: #3882f6;
+    border: 0px;
+    padding: 12px;
+    margin-top: 7px;
+    color: white;
+    font-weight: bold;
+    border-radius: 15%;
+    
+
+}
+
+
+
+
+
+
+
+
+
+
+
     
 
