--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -14,7 +14,7 @@ body {
 
 .intro {
     height: 100vh;
-    background-image: linear-gradient(#1f2937 55%, white 55%);
+    background-image: linear-gradient(#1f2937 55%, white 55%)
     
     
 }
@@ -105,6 +105,7 @@ p {
     margin: 0 auto;
     
     
+    
 }
 
 
@@ -120,6 +121,24 @@ h2 {
     font-family: Arial;
     
 }
+
+.content2 {
+    display: flex;
+    margin: 0 auto;
+    
+    
+}
+
+.content2 > * {
+    margin: auto;
+}
+
+
+
+.content2 img {
+    border-radius: 15px;
+}
+
 
 
 
