--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -33,6 +33,7 @@ ul {
 a {
     color: white;
     font-size: larger;
+    text-decoration: none;
 }
 
 .littpic {
@@ -127,17 +128,28 @@ h2 {
     margin: 0 auto;
     
     
+    
+    
 }
 
-.content2 > * {
-    margin: auto;
+.content2 {
+    margin: 0 auto;
+    display: flex;
+    margin-top: 50px;
+    justify-content: center;
+    gap: 57px;
+    
+    
 }
 
 
 
 .content2 img {
     border-radius: 15px;
+    
 }
+
+
 
 
 
