--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -130,6 +130,7 @@ h2 {
     
     
     
+    
 }
 
 .content2 {
@@ -148,6 +149,17 @@ h2 {
     border-radius: 15px;
     
 }
+
+
+.content3 {
+    display: flex;
+    margin: 0 auto;
+}
+
+
+
+
+
 
 
 
