--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -10,10 +10,11 @@ body {
     margin-right: 300px;
     display: flex;
     flex-direction: column;
+    
 }
 
 .intro {
-    height: 100vh;
+    height: 1000px;
     background-image: linear-gradient(#1f2937 55%, white 55%)
     
     
@@ -26,7 +27,7 @@ ul {
     padding: 16px;
     gap: 16px;
     justify-content: flex-end;
-    margin-right: 152px;
+    margin-right: 138px;
     font-family: Arial;
 }
 
@@ -107,6 +108,8 @@ p {
     
     
     
+    
+    
 }
 
 
@@ -126,10 +129,9 @@ h2 {
 .content2 {
     display: flex;
     margin: 0 auto;
+    padding-bottom: 20px;
     
-    
-    
-    
+
     
 }
 
@@ -141,12 +143,15 @@ h2 {
     gap: 57px;
     
     
+    
 }
 
 
 
 .content2 img {
     border-radius: 15px;
+    margin-top: 15px;
+    
     
 }
 
@@ -154,7 +159,47 @@ h2 {
 .content3 {
     display: flex;
     margin: 0 auto;
+    height: 350px;
+    
+
 }
+
+
+.content3 {
+    background-color: white;
+    margin: 0%;
+    height: 80px;
+    
+}
+
+
+.color {
+    background-color: #e5e7eb;
+    height: 400px;
+}
+
+.content3 > * {
+    margin: 0 auto;
+}
+
+.content3 p {
+    color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
