--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -1,6 +1,7 @@
 *  {
     margin: 0;
     padding: 0;
+    
 }
 
 
@@ -131,6 +132,7 @@ h2 {
     margin: 0 auto;
     padding-bottom: 20px;
     
+    
 
     
 }
@@ -156,35 +158,51 @@ h2 {
 }
 
 
-.content3 {
-    display: flex;
-    margin: 0 auto;
-    height: 350px;
+
+    
     
 
-}
 
 
 .content3 {
     background-color: white;
-    margin: 0%;
     height: 80px;
+    display: flex;
+    margin: 0;
     
 }
 
 
-.color {
-    background-color: #e5e7eb;
-    height: 400px;
-}
-
-.content3 > * {
-    margin: 0 auto;
-}
-
 .content3 p {
     color: black;
+    
+    
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+    
+    
+
+
+    
+
+
+
+
 
 
 
