Adjustment Made To Css
I took margin 0 auto off of the content 2 container and aligned the elements center using justify content. then i adjusted the height of content 2 to 425px to match the height of the first container. i also adjusted the margin top of the h2 heading to 115px, then i adjusted the margin top of the info heading to 50px. i also adjusted the margin top of the text to 3px

--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -116,7 +116,7 @@ p {
 
 .content h2 {
     margin: auto;
-    margin-top: 160px;
+    margin-top: 115px;
 }
 
 h2 {
@@ -129,20 +129,35 @@ h2 {
 
 .content2 img {
     border-radius: 15px;
+    
+    
+
+   
+    
 }
 
 
 .content2 {
     display: flex;
-    margin: 0 auto;
     background-color: white;
-    height: 450px;
+    height: 425px;
+    justify-content: center;
+    
+    
+    
     
 }
 
 
 .info {
     margin-top: 50px;
+    
+
+}
+
+
+.text {
+    margin-top: 3px;
 }
 
 
