--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -96,9 +96,11 @@ p {
    
 }
 
-.info {
+.first {
     margin-left: 80px;
     font-family: Arial;
+    margin-bottom: 33px;
+
 }
 
 
@@ -131,6 +133,7 @@ h2 {
     border-radius: 15px;
     
     
+    
 
    
     
@@ -142,6 +145,7 @@ h2 {
     background-color: white;
     height: 425px;
     justify-content: center;
+    gap: 50px;
     
     
     
@@ -158,6 +162,12 @@ h2 {
 
 .text {
     margin-top: 3px;
+}
+
+.container2 {
+    height: 250px;
+    background-color: #e5e7eb;
+
 }
 
 
