Upgrades Added To Container 3
I colored the text in container 3 black and changed the display to inline block so the text starts on new lines. then i added margin auto and justify content center so that the text shows up in the center of the container

--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -165,7 +165,20 @@ h2 {
     display: flex;
     height: 390px;
     background-color: #e5e7eb;
+    
 
+}
+
+.container3 p {
+    color: black;
+    display: inline-block;
+    
+}
+
+.container3 > * {
+    margin: auto;
+    justify-content: center;
+    
 }
 
 
