--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -172,6 +172,9 @@ h2 {
 .container3 p {
     color: black;
     display: inline-block;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
     
 }
 
