--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -163,7 +163,7 @@ h2 {
 .container3 {
     margin: 0 auto;
     display: flex;
-    height: 390px;
+    height: 415px;
     background-color: #e5e7eb;
     
 
@@ -174,7 +174,7 @@ h2 {
     display: inline-block;
     font-size: 36px;
     font-style: italic;
-    font-weight: lighter;
+    
     
 }
 
@@ -182,7 +182,28 @@ h2 {
     margin: auto;
     justify-content: center;
     
+
+    
+
+    
 }
+
+
+
+.container4 {
+    height: 330px;
+    background-color: white;
+}
+
+
+.footer {
+    height: 100px;
+    background-color: #1f2937;
+}
+
+
+
+
 
 
 
