Container 4 Added And Box Styled
I added container 4 and set the values to margin 0 auto. then i combined the container and the box and set the value to margin auto, so the box appears in the center of container 4, then i styled the box

--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -192,6 +192,7 @@ h2 {
 .container4 {
     height: 330px;
     background-color: white;
+    
 }
 
 
@@ -209,6 +210,36 @@ h2 {
     padding-left: 130px
     
 }
+
+
+.container4 {
+    margin-top: 0 auto;
+    display: flex;
+}
+
+
+.container4 .box {
+    margin: auto;
+}
+
+
+.box {
+    background-color: #3882f6;
+    width: 900px;
+    padding: 60px;
+    border: 10px solid #3882f6;
+    box-sizing: border-box;
+    margin: 0 auto;
+    border-radius: 7px;
+   }
+
+
+
+
+
+
+
+
 
 
 
