Button Positioned And Styled
Button positioned in the center of the box and styled. box height set to 115px

--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -226,12 +226,45 @@ h2 {
 .box {
     background-color: #3882f6;
     width: 900px;
+    height: 115px;
     padding: 60px;
     border: 10px solid #3882f6;
     box-sizing: border-box;
     margin: 0 auto;
     border-radius: 7px;
    }
+
+.box {
+    margin: 0 auto;
+    
+    
+}
+
+
+
+
+.box button {
+    background-color: #3882f6;
+    border: 2px solid white;
+    color: white;
+    padding: 8px 32px;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 18px;
+    
+}
+
+
+.box {
+    margin: 0 auto;
+    display: flex;
+}
+
+.box button {
+    margin: auto;
+    
+}
+
 
 
 
