--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -242,7 +242,7 @@ h2 {
 
 
 
-.box button {
+.container5 #buttonid {
     background-color: #3882f6;
     border: 2px solid white;
     color: white;
@@ -250,6 +250,7 @@ h2 {
     text-align: center;
     font-weight: bolder;
     font-size: 18px;
+    
     
 }
 
@@ -260,13 +261,16 @@ h2 {
     
     
     
+    
 }
 
 
 #text2 {
     margin-left: 40px;
+    
+    
+    
 }
-
 
 .box {
     display: flex;
@@ -274,6 +278,41 @@ h2 {
     justify-content: center;
     
 }
+
+
+
+
+
+.container5 {
+    margin: 0 auto;
+
+
+}
+
+
+
+
+.container5 > * {
+    margin: auto;
+}
+
+
+.container6 {
+    position: absolute;
+}
+
+
+#buttonid {
+    margin-left: 550px;
+}
+
+
+
+
+
+
+
+
 
 
 
