--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -307,7 +307,12 @@ h2 {
 }
 
 
-
+.footer {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 
 
 
