--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -7,16 +7,15 @@
 
 body {
     background-color: black;
-    margin-left: 300px;
-    margin-right: 300px;
     display: flex;
     flex-direction: column;
+    
     
 }
 
 .intro {
     height: 1000px;
-    background-image: linear-gradient(#1f2937 55%, white 55%)
+    background-image: linear-gradient(#1f2937 55%, white 55%);
     
     
 }
@@ -26,10 +25,11 @@ ul {
     list-style: none;
     margin: 0;
     padding: 16px;
-    gap: 16px;
+    gap: 50px;
     justify-content: flex-end;
-    margin-right: 138px;
+    margin-right: 314px;
     font-family: Arial;
+    
 }
 
 a {
@@ -39,7 +39,7 @@ a {
 }
 
 .littpic {
-    margin-left: 160px;
+    margin-left: 300px;
     margin-top: -86px;
 }
 
@@ -68,6 +68,8 @@ button {
     margin-left: 115px;
     
     
+    
+    
 }
 
 
@@ -75,11 +77,13 @@ button {
     display: flex;
     margin: 0 auto;
     justify-content: space-evenly;
-    margin-left: 40px;
-    
+ 
     
     
 }
+
+
+
 
 h1 {
     color: #f9faf8;
@@ -94,15 +98,25 @@ p {
    color: white;
    font-size: 18px;
    
+   
+   
 }
 
 .container2 {
     margin-left: 80px;
     font-family: Arial;
     margin-bottom: 33px;
+    
 
 }
 
+.container2 p {
+    margin-left: 140px;
+}
+
+.container2 button {
+    margin-left: 140px;
+}
 
 
 .content {
@@ -132,6 +146,7 @@ h2 {
 .content2 img {
     border-radius: 15px;
     
+    
         
 }
 
@@ -145,12 +160,12 @@ h2 {
     
     
     
-    
 }
 
 
 .info {
     margin-top: 50px;
+    
     
 
 }
@@ -178,7 +193,6 @@ h2 {
     font-style: italic;
     margin-left: 50px;
     margin-top: 20px;
-
     
 }
 
@@ -313,6 +327,24 @@ h2 {
     flex-direction: column;
     align-items: center;
 }
+
+
+h1 {
+    margin-left: 140px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
