--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -27,7 +27,7 @@ ul {
     padding: 16px;
     gap: 50px;
     justify-content: flex-end;
-    margin-right: 314px;
+    margin-right: 325px;
     font-family: Arial;
     
 }
@@ -77,6 +77,7 @@ button {
     display: flex;
     margin: 0 auto;
     justify-content: space-evenly;
+    margin-right: 340px;
  
     
     
@@ -333,7 +334,11 @@ h1 {
     margin-left: 140px;
 }
 
-
+#wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: 960px;
+}
 
 
 
