--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -2,11 +2,11 @@
     margin: 0;
     padding: 0;
     
+    
 }
 
 
 body {
-    background-color: black;
     display: flex;
     flex-direction: column;
     
@@ -15,6 +15,7 @@ body {
 
 .intro {
     height: 1000px;
+    width: 1900px;
     background-image: linear-gradient(#1f2937 55%, white 55%);
     
     
@@ -27,7 +28,7 @@ ul {
     padding: 16px;
     gap: 50px;
     justify-content: flex-end;
-    margin-right: 325px;
+    margin-right: 330px;
     font-family: Arial;
     
 }
@@ -41,6 +42,7 @@ a {
 .littpic {
     margin-top: -86px;
     margin-right: 318px;
+
     
     
     
@@ -83,6 +85,7 @@ button {
     margin-right: 340px;
     
     
+    
  
     
     
@@ -118,6 +121,7 @@ p {
 
 .container2 p {
     margin-left: 140px;
+    
 }
 
 .container2 button {
@@ -147,14 +151,18 @@ h2 {
     font-weight: bold;
     font-family: Arial;
     
+    
 }
 
 .content2 img {
     border-radius: 15px;
     
     
-        
+    
+            
 }
+
+
 
 
 .content2 {
@@ -167,6 +175,9 @@ h2 {
     
     
     
+
+    
+
 }
 
 
@@ -186,6 +197,7 @@ h2 {
     margin: 0 auto;
     display: flex;
     height: 415px;
+    width: 1900px;
     background-color: #e5e7eb;
     
 
@@ -201,6 +213,7 @@ h2 {
     margin-left: 50px;
     margin-top: 20px;
     
+    
 }
 
 .container3 > * {
@@ -213,6 +226,7 @@ h2 {
 
 .container4 {
     height: 330px;
+    width: 1900px;
     background-color: white;
     
 }
@@ -220,6 +234,7 @@ h2 {
 
 .footer {
     height: 100px;
+    width: 1900px;
     background-color: #1f2937;
 }
 
@@ -253,7 +268,9 @@ h2 {
     border: 10px solid #3882f6;
     margin: 0 auto;
     border-radius: 7px;
-   }
+    
+    
+}
 
 .box {
     margin: 0 auto;
@@ -298,6 +315,7 @@ h2 {
     flex-direction: column-reverse;
     justify-content: center;
     
+    
 }
 
 
@@ -306,6 +324,8 @@ h2 {
 
 .container5 {
     margin: 0 auto;
+    display: flex;
+    
 
 
 }
@@ -350,6 +370,11 @@ h1 {
 #nike {
     margin-top: 120px;
 }
+
+
+
+
+
 
 
 
