--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -15,8 +15,11 @@ body {
 
 .intro {
     height: 1000px;
-    width: 1900px;
+    max-width: 1900px;
     background-image: linear-gradient(#1f2937 55%, white 55%);
+    
+    
+    
     
     
 }
@@ -30,6 +33,8 @@ ul {
     justify-content: flex-end;
     margin-right: 330px;
     font-family: Arial;
+    
+    
     
 }
 
@@ -83,6 +88,7 @@ button {
     margin: 0 auto;
     justify-content: space-evenly;
     margin-right: 340px;
+
     
     
     
@@ -156,6 +162,8 @@ h2 {
 
 .content2 img {
     border-radius: 15px;
+
+    
     
     
     
@@ -169,20 +177,18 @@ h2 {
     display: flex;
     background-color: white;
     height: 450px;
+    max-width: 1900px;
     justify-content: center;
     gap: 70px;
     
     
     
-    
-
-    
-
 }
 
 
 .info {
     margin-top: 70px;
+    
     
     
 
@@ -197,7 +203,7 @@ h2 {
     margin: 0 auto;
     display: flex;
     height: 415px;
-    width: 1900px;
+    max-width: 1900px;
     background-color: #e5e7eb;
     
 
@@ -214,6 +220,7 @@ h2 {
     margin-top: 20px;
     
     
+    
 }
 
 .container3 > * {
@@ -226,7 +233,7 @@ h2 {
 
 .container4 {
     height: 330px;
-    width: 1900px;
+    max-width: 1900px;
     background-color: white;
     
 }
@@ -234,7 +241,7 @@ h2 {
 
 .footer {
     height: 100px;
-    width: 1900px;
+    max-width: 1900px;
     background-color: #1f2937;
 }
 
@@ -296,6 +303,7 @@ h2 {
     font-size: 25px;
     font-weight: bold;
     margin-left: 40px; 
+    flex-wrap: nowrap;
     
     
     
@@ -314,6 +322,7 @@ h2 {
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
+    
     
     
 }
@@ -370,6 +379,9 @@ h1 {
 #nike {
     margin-top: 120px;
 }
+
+
+
 
 
 
