--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -9,19 +9,20 @@
 body {
     display: flex;
     flex-direction: column;
+    background-color: black;
     
     
 }
 
 .intro {
     height: 1000px;
-    max-width: 1900px;
+    max-width: 2300px;
     background-image: linear-gradient(#1f2937 55%, white 55%);
     
+
     
-    
-    
-    
+   
+
 }
 
 ul {
@@ -33,6 +34,7 @@ ul {
     justify-content: flex-end;
     margin-right: 330px;
     font-family: Arial;
+    
     
     
     
@@ -80,6 +82,7 @@ button {
     
     
     
+    
 }
 
 
@@ -88,6 +91,7 @@ button {
     margin: 0 auto;
     justify-content: space-evenly;
     margin-right: 340px;
+    
 
     
     
@@ -121,6 +125,8 @@ p {
     margin-left: 80px;
     font-family: Arial;
     margin-bottom: 33px;
+    
+    
     
 
 }
@@ -162,13 +168,16 @@ h2 {
 
 .content2 img {
     border-radius: 15px;
+    
 
     
     
     
     
-            
 }
+
+
+ 
 
 
 
@@ -177,9 +186,10 @@ h2 {
     display: flex;
     background-color: white;
     height: 450px;
-    max-width: 1900px;
+    max-width: 2300px;
     justify-content: center;
     gap: 70px;
+    
     
     
     
@@ -188,6 +198,8 @@ h2 {
 
 .info {
     margin-top: 70px;
+    
+    
     
     
     
@@ -203,7 +215,7 @@ h2 {
     margin: 0 auto;
     display: flex;
     height: 415px;
-    max-width: 1900px;
+    max-width: 2300px;
     background-color: #e5e7eb;
     
 
@@ -233,7 +245,7 @@ h2 {
 
 .container4 {
     height: 330px;
-    max-width: 1900px;
+    max-width: 2300px;
     background-color: white;
     
 }
@@ -241,7 +253,7 @@ h2 {
 
 .footer {
     height: 100px;
-    max-width: 1900px;
+    max-width: 2300px;
     background-color: #1f2937;
 }
 
@@ -259,11 +271,14 @@ h2 {
 .container4 {
     margin-top: 0 auto;
     display: flex;
+    
 }
 
 
 .container4 .box {
     margin: auto;
+    
+    
 }
 
 
@@ -276,11 +291,14 @@ h2 {
     margin: 0 auto;
     border-radius: 7px;
     
+
+    
     
 }
 
 .box {
     margin: 0 auto;
+    display: flex;
     
     
 }
@@ -303,7 +321,7 @@ h2 {
     font-size: 25px;
     font-weight: bold;
     margin-left: 40px; 
-    flex-wrap: nowrap;
+    
     
     
     
@@ -316,12 +334,15 @@ h2 {
     
     
     
+    
+    
 }
 
 .box {
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
+    
     
     
     
@@ -374,11 +395,15 @@ h1 {
     margin-right: auto;
     width: 960px;
     
+    
+    
 }
 
 #nike {
     margin-top: 120px;
 }
+
+
 
 
 
