--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -13,6 +13,7 @@ body {
     flex-direction: column;
     
     
+    
 
     
 }
@@ -23,9 +24,18 @@ body {
     height: 500px;
     max-width: 2000px;
     background-color: #1f2937;
-    justify-content: flex-end;
     
     
+    
+    
+}
+
+
+
+
+.container img {
+    margin-top: -30px;
+    margin-left: 380px;
 }
 
 
@@ -33,12 +43,13 @@ ul {
     display: flex;
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 16px;
     gap: 50px;
-    justify-content: flex-end;
-    margin-right: 400px;
-    margin-top: 18px;
+    font-family: Arial;
+    margin-left: 600px;
 
+   
+   
 }
 
 
@@ -48,12 +59,21 @@ a {
     text-decoration: none;
 }
 
-.container img {
+#nike {
     display: flex;
-    margin-top: 100px;
-    margin-right: 396px;
-    
+    margin-top: 120px;
+    margin-left: 55px;
 }
+
+
+
+
+
+
+
+
+
+
 
 
 
