--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -47,7 +47,7 @@ ul {
     padding: 16px;
     gap: 50px;
     font-family: Arial;
-    margin-left: 540px;
+    margin-left: 469px;
 
    
    
@@ -63,7 +63,7 @@ a {
 #nike {
     display: flex;
     margin-top: 140px;
-    margin-left: 70px;
+    margin-right: 300px;
     
 }
 
@@ -99,6 +99,13 @@ button {
 
 #introtext {
     margin-left: 344px;
+}
+
+
+#wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
 }
 
 
