--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -218,6 +218,38 @@ h2 {
 
 }
 
+/*End of container 4*/
+
+
+.container6 {
+    display: flex;
+    background-color: white;
+    height: 300px;
+    max-width: 2000px;
+    margin: 0 auto;
+    
+}
+
+.container6 > * {
+    margin: auto;
+}
+
+
+
+
+.box {
+    display: flex;
+    background-color: #3882f6;
+    width: 1000px;
+    height: 10px;
+    padding: 60px;
+    border: 10px solid #3882f6;
+    border-radius: 10px;
+    
+    
+   
+}
+
 
 
 
