--- a/project-landing-page/style.css
+++ b/project-landing-page/style.css
@@ -14,6 +14,7 @@ body {
     
     
     
+    
 
     
 }
@@ -127,6 +128,8 @@ button {
 }
 
 
+
+
 .container3 > * {
     margin: auto;
 }
@@ -162,7 +165,8 @@ h2 {
     gap: 70px;
 }
 
-.content3 > * {
+
+.content3 > * { 
     margin: auto;
 }
 
@@ -173,6 +177,7 @@ h2 {
     
     
 }
+
 
 
 .info img {
@@ -228,17 +233,20 @@ h2 {
     max-width: 2000px;
     margin: 0 auto;
     
+    
+    
 }
 
-.container6 > * {
+.container6 .flex-container {
     margin: auto;
 }
 
 
 
 
-.box {
-    display: flex;
+
+
+.flex-container {
     background-color: #3882f6;
     width: 1000px;
     height: 10px;
@@ -247,8 +255,97 @@ h2 {
     border-radius: 10px;
     
     
-   
+    
+    
 }
+
+.flex-container {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+}
+
+
+
+
+
+
+
+
+
+.container7 #buttonid {
+    display: flex;
+    background-color: #3882f6;
+    border: 2px solid white;
+    color: white;
+    padding: 6px 30px;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 18px;
+    
+
+
+}
+
+
+.container7 {
+    display: flex;
+    margin: 0 auto;
+}
+
+
+#buttonid {
+    margin-left: 500px;
+    
+}
+
+
+.container8 {
+    
+    margin: 0 auto;
+}
+
+.container8 {
+    position: absolute;
+}
+
+
+#text {
+    margin-right: 600px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
